# paper-vocab

./: .gitignore  README.md  pyproject.toml
skills/paper-vocab-validation/: SKILL.md
src/paper_vocab/: __init__.py  cli.py  lookup.py  vocab_db.py
tests/: test_lookup.py
